<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">StyList</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sty_text">Stylist</string>
    <string name="cli_text">Client</string>
    <string name="login_txt">Already have a Sty-list account?</string>
    <string name="Login">Log In</string>
    <string name="createnew_txt">New to Sty-list?</string>
    <string name="createnew">Create Sty-list Account</string>
    <string name="createnew_txt_xml">Create a stylist account by entering the following information</string>
    <string name="stylist">Sty-list\'s</string>
    <string name="create">Create Account</string>
    <string name="no_internet_message">Internet not available. Please try again.</string>
    
    <!-- login -->
    
    <string name="login_email">Email</string>
    <string name="login_passwd">Password</string>
    <string name="login_signin">Sign In</string>
    
    <!-- home -->
    
    <string name="home_wel_next">Next</string>
    <string name="home_wel">Create Your Sty-list Wall</string>
    <string name="home_welthird">Add a shop location</string>
    <string name="home_shop">Add Store</string>
    <string name="home_wall">Wall</string>
    <string name="home_servicelist">ServiceList</string>
    <string name="home_calender">Calender</string>
    <string name="home_clent">Client</string>
    <string name="home_activities">Activities</string>
    <string name="home_schedule">Schedule</string>
    <string name="home_cashflow">Cashflow</string>
    <string name="home_services">Services</string>
    <string name="home_edit">Edit Profile</string>
    <string name="home_editshopdetail">Edit Shop Detail</string>
    <string name="home_edit_save">Save</string>
    
    <!-- calender -->
    
    <string name="calender_txt" >Calender</string>
    <string name="calender_edit">Add Appointment</string>
    <string name="calender_adult">Adult:</string>
    <string name="calender_child">Child:</string>
    <string name="calender_save">Create Appointment</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="twenty_one">21</string>
    <string name="twenty_two">22</string>
    <string name="twenty_three">23</string>
    <string name="twenty_four">24</string>
    <string name="twenty_five">25</string>
    <string name="twenty_six">26</string>
    <string name="twenty_seven">27</string>
    <string name="twenty_eight">28</string>
    <string name="twenty_nine">29</string>
    <string name="thirty">30</string>
    <string name="thitry_one">31</string>

    <!--walkin resources -->
      <string name="walkingDescriptive">Add walk In your schedule list\nEnter the customer firstname and\nlastname or leave the field blank to \n              create the walk In</string>
    
    <string name="AddWalkIn">Add Walk In</string>
</resources>
