<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackbg"
    tools:context=".LoginActivity" >

    <include
        android:id="@+id/header_lyt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/title_bar" >
    </include>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header_lyt"
        android:fadeScrollbars="false"
        android:fadingEdge="none"
        android:overScrollMode="never" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/ph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/createnew_txt_xml"
                    android:textColor="@color/text_white"
                    android:textSize="15dp" >
                </TextView>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/ques_textfield_visible"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:paddingLeft="5dip"
                    android:textColor="@android:color/black"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/ques_textfield_visible"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:paddingLeft="5dip"
                    android:textColor="@android:color/black"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/cnfrmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/ques_textfield_visible"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:paddingLeft="5dip"
                    android:textColor="#000000"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/selectstylisttype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/ques_textfield_visible"
                    android:drawableRight="@drawable/downarrow"
                    android:focusable="false"
                    android:hint="Select Stylist Type"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:textColor="#000000"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/referral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/ques_textfield_visible"
                    android:hint="Referral"
                    android:inputType="text"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:paddingLeft="5dip"
                    android:textColor="#000000"
                    android:textSize="14dp" />

                <RelativeLayout
                    android:id="@+id/seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/six"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/ph"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/stylist"
                        android:textColor="@color/text_white"
                        android:textSize="15dp" >
                    </TextView>

                    <TextView
                        android:id="@+id/terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/ph"
                        android:text=" Terms "
                        android:textColor="@color/text_blue"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/an"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/terms"
                        android:text="and"
                        android:textColor="@color/text_white"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/an"
                        android:text=" Policy&apos;s "
                        android:textColor="@color/text_blue"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/eight"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ques_textfield_visible" >

                    <TextView
                        android:id="@+id/ph"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dip"
                        android:text="I accept the Terms and policy\&apos;s"
                        android:textColor="@color/black_text"
                        android:textSize="12dp"
                        android:textStyle="bold" >
                    </TextView>

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:button="@drawable/checkbox" />
                </RelativeLayout>

                <Button
                    android:id="@+id/rl_createacc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_general_large"
                    android:background="@drawable/button_contact"
                    android:text="@string/create"
                    android:textColor="@color/text_white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>